# redis-glib

./: .gitignore  ChangeLog  Makefile.am  Makefile.include  README  autogen.sh  configure.ac
data/: Makefile.include  redis-glib-1.0.pc.in
redis-glib/: Makefile.include  redis-client.c  redis-client.h
tests/: Makefile.include  test-redis-client.c
